kubernetes/apps/network/external-services/proxmox-ve/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app proxmox-ve
  labels:
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.2
      - 10.10.0.3
      - 10.10.0.4
      - 10.10.0.5
    conditions:
      ready: true
ports:
  - name: https
    port: 8006
